updating controllers/models/routes, updating openapi.yaml
